tests/snapshots/integraion__integraion__basic.snap
---
source: tests/integraion.rs
expression: "String::from_utf8(cmd.assert().success().get_output().stdout.clone())?"
---
client,available,held,total,locked
1,1.5,0.0,1.5,false
2,2.0,0.0,2.0,false

