tests/snapshots/integraion__integraion__dispute_withdrawal_empty.snap
---
source: tests/integraion.rs
expression: stdout
---
client,available,held,total,locked
1,0.0,0.0,0.0,false

