tests/snapshots/integraion__integraion__locked.snap
---
source: tests/integraion.rs
expression: stdout
---
client,available,held,total,locked
1,0.0,0.0,0.0,true

